--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -46,6 +46,10 @@
 		width: auto;
 		max-height: calc(100% - 12px);
 		z-index: 3;
+		display: none;
+		@media (min-width: 700px) {
+			display: block;
+		}
 	}
 	.form-wrap {
 		position: relative;
