--- a/sourse/pug/blocks/modal/_modal.pug
+++ b/sourse/pug/blocks/modal/_modal.pug
@@ -8,7 +8,7 @@ mixin modal()
 			+form-wrap
 				.text-center
 					h4 Вызвать замерщика
-					p.after-headline Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;договоримся о&nbsp;замере
+					p Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;договоримся о&nbsp;замере
 				+input("Ваше Имя")(required)
 				+input("+7 ___ ___ __ __", 'tel')(required)
 				+e.BUTTON.btn.btn(type="submit") Отправить
@@ -17,5 +17,24 @@ mixin modal()
 				+pic('modal-bg.jpg', 'bg', 0).picture-bg
 				
 	// #modal-call
+
+	div(id="modal-call-reviews"  style="display: none" )
+		+b.modal-win--reviews
+			.sClientsReviews__wrap
+				.row
+					.col-md
+						.sClientsReviews__profile
+							.sClientsReviews__profile-content
+								.sClientsReviews__avatar
+								.sClientsReviews__info
+									span Клиент
+									span Игорь
+									p МО, г. Дмитров, СНТ &laquo;Квазаровка&raquo;
+					.col-md
+						audio.js-player(controls='')
+							source(src="audio/sample.mp3" type="audio/mp3")
+				+content('&laquo;Убрали за&nbsp;собой мусор, соблюдали чистоту&raquo;', 'Вы&nbsp;купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.', 'Вы&nbsp;купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из&nbsp;бревен, кирпичей, металла, дерева и&nbsp;других материалов, и&nbsp;все эти идеи можно воплотить с&nbsp;помощью навеса. В&nbsp;этой статье мы&nbsp;расскажем о&nbsp;7&nbsp;способах, как украсить участок, и&nbsp;сделать жизнь комфортнее под навесом.')
+				
+	// #modal-call-reviews
 	
 	// end modals
