--- a/sourse/pug/blocks/sClientsReviews/_sClientsReviews.pug
+++ b/sourse/pug/blocks/sClientsReviews/_sClientsReviews.pug
@@ -1,8 +1,8 @@
-mixin content(title, ...items)
-	+e.content
-		h4!= title
-		each item in items
-			p!= item
+//- mixin content(title, ...items)
+//- 	+e.content
+//- 		h4!= title
+//- 		each item in items
+//- 			p!= item
 
 mixin sClientsReviews(data)
 	// start sClientsReviews
