--- a/sourse/pug/pages/00-modal.pug
+++ b/sourse/pug/pages/00-modal.pug
@@ -30,6 +30,7 @@ block pagecontent
 				.col-auto.mb-2
 					a.btn.btn-primary.link-modal-js(href=`#${id}`)= name
 			+btn("modal-call", "modal-call")
+			+btn("modal-call-reviews", "modal-call-reviews")
 	+footer
 
 
