--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -39,6 +39,62 @@
 	@media (min-width: 700px) {
 		width: rem(656);
 	}
+	&--reviews {
+		width: rem(800);
+		@media (min-width: 700px) {
+			width: rem(800);
+		}
+		.sClientsReviews__wrap {
+			padding: rem(32) rem(16) rem(32);
+			background-color: $white;
+			@media (min-width: 450px) {
+				padding: rem(32);
+			}
+			.row {
+				margin-bottom: rem(24);
+				--bs-gutter-x: #{rem(20)};
+				--bs-gutter-y: var(--bs-gutter-x);
+			}
+			.plyr--audio {
+				max-width: rem(336);
+				@include media-breakpoint-up(md) {
+					margin-left: auto;
+				}
+			}
+		}
+		.sClientsReviews__profile {
+			margin-bottom: 0;
+		}
+		.modal-win__content {
+			h4 {
+				margin-bottom: rem(13);
+				color: $black;
+			}
+			p {
+				font-size: rem(13);
+				color: $black;
+				font-weight: 500;
+				@include media-breakpoint-up(sm) {
+					font-size: rem(14);
+				}
+				@include media-breakpoint-up(md) {
+					font-size: rem(16);
+				}
+				@include media-breakpoint-up(lg) {
+					font-size: rem(18);
+				}
+				&:first-of-type {
+					margin-bottom: rem(15);
+					@include media-breakpoint-up(lg) {
+						margin-bottom: rem(31);
+					}
+				}
+				&:last-of-type {
+					margin-bottom: 0;
+				} 
+			}
+		}
+	}
 	& > picture {
 		position: absolute;
 		bottom: -1px;
@@ -96,7 +152,7 @@
 				}
 			}
 		}
-		.after-headline {
+		p {
 			font-weight: 500;
 			font-size: rem(13);
 			line-height: 150%;
@@ -150,6 +206,7 @@
 		font-size: 40px;
 		font-weight: 100;
 	}
+	
 }
 
 a {
@@ -285,4 +342,10 @@ a {
 
 .fancybox__content :focus:not(.carousel__button.is-close) {
 	outline: none;
+}
+.fancybox__slide {
+	padding: rem(48) rem(16) rem(16) rem(16);
+	@media (min-width: 1024px) {
+		padding: rem(64) rem(100);
+	}
 }
