--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -1,7 +1,11 @@
 mixin headerBlock()
 	// start headerBlock
 	+b.headerBlock.section.bg-wrap#headerBlock&attributes(attributes)
-		+pic(`headerBlock-bg.png`, `bg`, 0).picture-bg
+		video(loading='lazy' preload='auto' no-controls  autoplay  loop  playsinline  muted  poster='img/@2x/webp/video.webp')
+			source(src='video/video-1.mp4' type='video/mp4')
+			//- source(src='video/video.ogv' type='video/ogv')
+			//- source(src='video/video.webm' type='video/webm')
+		//- +pic(`headerBlock-bg.png`, `bg`, 0).picture-bg
 		.container
 			.row
 				+e.col.col
