--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -19,18 +19,25 @@
 		--sPB: #{rem(72)};
 		--sTPB: #{rem(47)};
 	}
-	picture {
+	&::after {
+		content: "";
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 77.62%);
 		z-index: -3;
-		&::after {
-			content: "";
-			position: absolute;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 77.62%);
-		}
-		
+	}
+	& > picture,
+	& > video {
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		z-index: -3;
 	}
 	&__col {
 		display: flex;
@@ -101,10 +108,10 @@
 	&__cards {
 		margin-top: rem(32);
 		@include media-breakpoint-up(lg) {
-		margin-top: rem(60);
+			margin-top: rem(60);
 		}
 		@include media-breakpoint-up(xxl) {
-		margin-top: rem(80);
+			margin-top: rem(80);
 		}
 		.row {
 			--bs-gutter-x: #{rem(24)};
@@ -123,6 +130,17 @@
 		max-width: rem(400);
 		margin-left: auto;
 		margin-right: auto;
+		&::after {
+			content: "";
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			z-index: -2;
+			border-radius: 16px;
+			box-shadow: 10px 18px 19px 0px #00000052;
+		}
 		@include media-breakpoint-up(lg) {
 			flex-direction: column;
 			padding: 0 rem(25) rem(25) rem(25);
