--- a/sourse/pug/pages/00-modal.pug
+++ b/sourse/pug/pages/00-modal.pug
@@ -32,7 +32,7 @@ block pagecontent
 			+btn("modal-call-measurer", "Вызвать замерщика")
 			+btn("modal-call-calculation", "Получить расчет")
 			+btn("modal-call-back", "Запросить обратный звонок")
-			+btn("modal-call-want", "Запросить обратный (хочу навес)")
+			+btn("modal-call-want", "Запросить обратный звонок (хочу навес)")
 			+btn("modal-call-similar", "Запросить расчет похожего")
 			+btn("modal-call-detailed", "Запросить расчет детальный")
 			+btn("modal-call-excursion", "Записаться на экскурсию")
