--- a/sourse/pug/pages/02-blog-page.pug
+++ b/sourse/pug/pages/02-blog-page.pug
@@ -38,8 +38,12 @@ block pagecontent
 		btn: 'btn',
 		menu: 'menu'
 	})
-		+info-panel()
-
+		+infoPanel()
+			+infoPanelItem(``, `Как выбрать`).--btn
+			+infoPanelItem(``, `15.09.21`).--btn
+			+infoPanelItem(`eye`, `834`).--views
+			+infoPanelItem(`clock`, `5&nbsp;минут`).--time
+	+sContent()
 	+sContact()
 	.section-wrapper
 		+footer()
