--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -47,7 +47,7 @@ block pagecontent
 		+sCertificates()
 		+sCatalogProd()
 	+sContact()
-	.section-wrapper
+	.section-wrapper.section-wrapper--footer
 		+footer()
 	//- +sForm()
 	+scrollToTop()
