--- a/sourse/pug/blocks/sBlog/_sBlog.pug
+++ b/sourse/pug/blocks/sBlog/_sBlog.pug
@@ -60,3 +60,52 @@ mixin sBlog(data)
 				.col-md-8.col-xl-9
 					+blogItem(4, `Н8&nbsp;форм кровли для навесов`)
 	// end sBlog
+
+mixin sBlogPage()
+	+b.SECTION.sBlogPage.section#sBlogPage&attributes(attributes)
+		.container
+			+e.preview
+				+pic(`blog-8.jpg`,'',0)
+				p Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из бревен, кирпичей, металла, дерева и других материалов, и все эти идеи можно воплотить с помощью навеса. В этой статье мы расскажем о 7 способах, как украсить участок, и сделать жизнь комфортнее под навесом.
+			+content-table
+			+b.blog-page-item
+				h2 Входная группа
+				.row
+					.col-lg-9
+						+e.caption Навес над входной группой необходим для защиты крыльца или веранды от дождя, снега и наледи. Чтобы не образовался гололед, на котором легко поскользнуться, а также чтобы входную дверь можно было без проблем открыть, не опасаясь, что это окажется невозможным из-за завалов снега. Также навес над входной группой помогает содержать проход ко входу в дом в чистоте и сухости. Навес из поликарбоната идеально подойдет для такой роли. 
+					.col-lg-9
+						+pic(`blog-4.jpg`,'',0)
+					.col-lg-3.col-sm-6
+						+blogItem(6, `5&nbsp;причин, почему навес необходим практически каждому`)
+			+blog-page-item(`Закрытая веранда`,`Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.`)
+			+blog-page-item(`Открытая веранда`,`Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.`)
+			+b.blog-page-item
+					h2 Навес для автомобиля
+					.row
+						.col-lg-9
+							+e.caption Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
+						.col-lg-9
+							+pic(`blog-4.jpg`,'',0)
+						.col-lg-3.col-sm-6
+							+adv-item(`Акция`,`Скидка до 17% на навесы для&nbsp;автомобиля`,`Подробнее`,`1`)
+			+blog-page-item(`Беседка`,`Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.`)
+			+b.blog-page-item
+				h2 Игровая зона для детей (h2)
+				.row
+					.col-lg-9
+						+e.caption Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
+					.col-lg-9
+						h3 Игровая зона для детей (h3)
+						h4 Игровая зона для детей (h4)
+						h5 Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха. (h5)
+						+e.mini-text Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
+						+pic(`blog-4.jpg`,'',0)
+
+mixin blog-page-item(title,caption)
+	+b.blog-page-item
+		h2!=title
+		.row
+			.col-lg-9
+				+e.caption!=caption
+			.col-lg-9
+				+pic(`blog-4.jpg`,'',0)
