--- a/sourse/pug/blocks/sContact/_sContact.pug
+++ b/sourse/pug/blocks/sContact/_sContact.pug
@@ -4,7 +4,7 @@ mixin sContact()
 		.container
 			+b.section-title.text-center
 				h4 Контакты
-				h2 Позвоните или посетите наш офис на&nbsp;производстве
+				h2 Позвоните или посетите наш офис&nbsp;на&nbsp;производстве
 			+e.row.row
 				.col-lg-7.col-xxl-8
 					+e.map
