--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -557,6 +557,9 @@
 	border-radius: 16px;
 	position: relative;
 	padding: rem(24);
+	display: flex;
+	flex-direction: column;
+	min-height: rem(320);
 	picture {
 		img {
 			width: 100%;
@@ -581,5 +584,6 @@
 		@extend .btn, .btn-primary;
 		width: 100%;
 		box-shadow: 0px 4px 0px #E2A826, 0px 10px 13px rgba(0, 0, 0, 0.09);
+		margin-top: auto;
 	}
 }
