--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -560,6 +560,7 @@
 	display: flex;
 	flex-direction: column;
 	min-height: rem(320);
+	background-color: $white;
 	picture {
 		img {
 			width: 100%;
