--- a/sourse/pug/pages/02-blog-page.pug
+++ b/sourse/pug/pages/02-blog-page.pug
@@ -45,7 +45,7 @@ block pagecontent
 			+infoPanelItem(`clock`, `5&nbsp;минут`).--time
 	+sContent()
 	+sContact()
-	.section-wrapper
+	.section-wrapper.section-wrapper--footer
 		+footer()
 	+scrollToTop()
 
