--- a/sourse/pug/pages/02-blogs.pug
+++ b/sourse/pug/pages/02-blogs.pug
@@ -40,7 +40,7 @@ block pagecontent
 	})
 	+sBlog()
 	+sContact()
-	.section-wrapper
+	.section-wrapper.section-wrapper--footer
 		+footer()
 	//- +sForm()
 	+scrollToTop()
