--- a/sourse/pug/pages/03-portfolio.pug
+++ b/sourse/pug/pages/03-portfolio.pug
@@ -59,7 +59,7 @@ block pagecontent
 	//- 	+sCatalogProd()
 	//- .section-wrapper
 	+sContact()
-	.section-wrapper
+	.section-wrapper.section-wrapper--footer
 		+footer()
 	//- +sForm()
 	+scrollToTop()
