--- a/sourse/pug/pages/04-reviews.pug
+++ b/sourse/pug/pages/04-reviews.pug
@@ -56,7 +56,7 @@ block pagecontent
 	//- 	+sCatalogProd()
 	//- .section-wrapper
 	+sContact()
-	.section-wrapper
+	.section-wrapper.section-wrapper--footer
 		+footer()
 	//- +sForm()
 	+scrollToTop()
