--- a/sourse/pug/pages/02-blogs.pug
+++ b/sourse/pug/pages/02-blogs.pug
@@ -33,7 +33,7 @@ block pagecontent
 	+header()
 		+top-nav()
 		+topLine()
-	+page-head({
+	+page-head-fixed({
 		title,
 		menu: 'menu',
 		search:'search'
