02-blog-page in work

--- a/sourse/pug/blocks/sBlog/_sBlog.pug
+++ b/sourse/pug/blocks/sBlog/_sBlog.pug
@@ -100,6 +100,8 @@ mixin sBlogPage()
 						h5 Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха. (h5)
 						+e.mini-text Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
 						+pic(`blog-4.jpg`,'',0)
+			+blog-page-item(`Навес для кладовой`,`Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.`)
+			+recall-item()
 
 mixin blog-page-item(title,caption)
 	+b.blog-page-item
@@ -109,3 +111,10 @@ mixin blog-page-item(title,caption)
 				+e.caption!=caption
 			.col-lg-9
 				+pic(`blog-4.jpg`,'',0)
+
+mixin recall-item()
+	+b.recall-item.bg-wrap
+		+pic(`recall-item.jpg`,'',0).picture-bg
+		+e.title Обратная связь
+		+e.caption Задайте свой<br>вопрос в Вотсапе
+		+e.btn(href="#") Написать
