--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -192,7 +192,7 @@
 		// }
 		top: 48px;
 		left: 0;
-		width: calc(100vw + 5px);
+		width: 100vw;
 		z-index: 999;
 		.container {
 			margin-top: 0;
