--- a/sourse/pug/blocks/sBlog/_sBlog.pug
+++ b/sourse/pug/blocks/sBlog/_sBlog.pug
@@ -101,8 +101,7 @@ mixin sBlogPage()
 						+e.mini-text Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
 						+pic(`blog-4.jpg`,'',0)
 			+blog-page-item(`Навес для кладовой`,`Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.`)
-			+recall-item()
-
+			+banner-item()
 mixin blog-page-item(title,caption)
 	+b.blog-page-item
 		h2!=title
@@ -112,9 +111,23 @@ mixin blog-page-item(title,caption)
 			.col-lg-9
 				+pic(`blog-4.jpg`,'',0)
 
-mixin recall-item()
-	+b.recall-item.bg-wrap
-		+pic(`recall-item.jpg`,'',0).picture-bg
+mixin banner-item()
+	+b.banner-item.bg-wrap
+		+pic(`banner-item.jpg`,'',0).picture-bg
 		+e.title Обратная связь
 		+e.caption Задайте свой<br>вопрос в Вотсапе
 		+e.btn(href="#") Написать
+
+mixin banner-item-offer-center()
+	+b.banner-item--offer-center.bg-wrap
+		+pic(`banner-item-2.jpg`,'',0).picture-bg
+		+e.title Каталог
+		+e.caption Типовые арочные навесы<br>из поликарбоната<br><span>от 72 000 ₽</span>
+		+e.btn(href="#") Смотреть варианты
+
+mixin banner-item-offer()
+	+b.banner-item--offer.bg-wrap
+		+pic(`banner-item-3.jpg`,'',0).picture-bg
+		+e.title Калькулятор
+		+e.caption Получите цену<br>навеса и посмотрите,<br>как он будет выглядеть
+		+e.btn(href="#") Создать свой навес
