--- a/sourse/pug/blocks/sBlog/_sBlog.scss
+++ b/sourse/pug/blocks/sBlog/_sBlog.scss
@@ -8,7 +8,7 @@
 		--sPB: #{rem(80)};
 		--sTPB: #{rem(75)};
 	}
-	.container {
+	& > .container {
 		& > .row {
 			--bs-gutter-x: #{rem(16)};
 			--bs-gutter-y: calc(var(--bs-gutter-x) * 1.5);
@@ -93,7 +93,7 @@
 			border-radius: 16px;
 		}
 		border-radius: 16px;
-			border: 1px solid #e0e0e0;
+		border: 1px solid #e0e0e0;
 	}
 	.blog-item {
 		picture {
@@ -154,7 +154,7 @@
 			margin-bottom: rem(46);
 		}
 		text-align: center;
-		@include media-breakpoint-up(sm){
+		@include media-breakpoint-up(sm) {
 			font-size: rem(36);
 		}
 		font-size: rem(28);
@@ -162,7 +162,7 @@
 		line-height: 105%;
 		font-weight: bold;
 		color: $white;
-		span{
+		span {
 			font-weight: normal;
 		}
 	}
@@ -170,21 +170,21 @@
 		@extend .btn, .btn-primary, .with-shadow;
 		box-shadow: 0px 4px 0px #e2a826, 0px 10px 13px rgba(0, 0, 0, 0.09);
 	}
-	&--offer-center{
-		.banner-item__title{
+	&--offer-center {
+		.banner-item__title {
 			margin-bottom: rem(17);
 		}
-		.banner-item__caption{
+		.banner-item__caption {
 			margin-bottom: rem(24);
 		}
 	}
-	&--offer{
+	&--offer {
 		align-items: flex-start;
-		.banner-item__title{
+		.banner-item__title {
 			margin-bottom: rem(17);
 			text-align: left;
 		}
-		.banner-item__caption{
+		.banner-item__caption {
 			margin-bottom: rem(24);
 			text-align: left;
 		}
