--- a/sourse/pug/pages/00-modal.pug
+++ b/sourse/pug/pages/00-modal.pug
@@ -28,14 +28,14 @@ block pagecontent
 		.row
 			mixin btn(id, name)
 				.col-auto.mb-3
-					a.btn.btn-primary.link-modal-js(href=`#${id}`)= name
-			+btn("modal-call-measurer", "Вызвать замерщика")
-			+btn("modal-call-calculation", "Получить расчет")
-			+btn("modal-call-back", "Запросить обратный звонок")
-			+btn("modal-call-want", "Запросить обратный звонок (хочу навес)")
-			+btn("modal-call-similar", "Запросить расчет похожего")
-			+btn("modal-call-detailed", "Запросить расчет детальный")
-			+btn("modal-call-excursion", "Записаться на экскурсию")
+					a.btn.btn-primary.link-modal-js(href=`#${id}`)&attributes(attributes)= name
+			+btn("modal-call", "Вызвать замерщика")(data-title= "Вызвать замерщика" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;договоримся о&nbsp;замере" data-btn= "Отправить" data-pic= "1")
+			+btn("modal-call", "Получить расчет")(data-title= "Получить расчет" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет." data-btn= "Получить расчет" data-pic= "2")
+			+btn("modal-call", "Запросить обратный звонок")(data-title= "Обратный звонок" data-text= "Оставьте свой номер телефона и&nbsp;мы&nbsp;вам перезвоним в&nbsp;течение 15&nbsp;минут." data-btn= "Запросить обратный звонок" data-pic= "2")
+			+btn("modal-call", "Запросить обратный звонок (хочу навес)")(data-title= "Хочу навес Н1830" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;сообщим детальную информацию по&nbsp;навесу, направим к&nbsp;вам замерщика или поможем оформить заказ онлайн" data-btn= "Запросить обратный звонок" data-pic= "2")
+			+btn("modal-call", "Запросить расчет похожего")(data-title= "Запросить расчет похожего навеса" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет" data-btn= "Запросить расчет" data-pic= "2")
+			+btn("modal-call", "Запросить расчет детальный")(data-title= "Запросить детальный расчет" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет." data-btn= "Запросить расчет" data-pic= "1")
+			+btn("modal-call", "Записаться на экскурсию")(data-title= "Записаться на&nbsp;экскурсию по&nbsp;производству" data-text= "Оставьте свой номер телефона, мы&nbsp;перезвоним в&nbsp;течение 15&nbsp;минут и&nbsp;запишем вас" data-btn= "Запсиаться на&nbsp;экскурсию" data-pic= "1")
 			+btn("modal-call-reviews", "Обзор")
 	+footer
 
