--- a/sourse/pug/pages/02-blog-page.pug
+++ b/sourse/pug/pages/02-blog-page.pug
@@ -46,6 +46,7 @@ block pagecontent
 			+infoPanelItem(`clock`, `5&nbsp;минут`).--time
 	//- +sContent()
 	+sBlogPage
+	+sBlog(``, `Продолжайте читать`).sBlog--content
 	+sContact()
 	.section-wrapper.section-wrapper--footer
 		+footer()
