--- a/sourse/pug/pages/02-blogs.pug
+++ b/sourse/pug/pages/02-blogs.pug
@@ -38,7 +38,7 @@ block pagecontent
 		menu: 'menu',
 		search:'search'
 	})
-	+sBlog()
+	+sBlog(`head`, ``)
 	+sContact()
 	.section-wrapper.section-wrapper--footer
 		+footer()
