--- a/sourse/pug/blocks/sContact/_sContact.scss
+++ b/sourse/pug/blocks/sContact/_sContact.scss
@@ -7,6 +7,9 @@
 		--sPB: #{rem(90)};
 	}
 	h2 {
+		max-width: 16em;
+		margin-left: auto;
+		margin-right: auto;
 		margin-bottom: rem(32);
 		@include media-breakpoint-up(lg) {
 			margin-bottom: rem(78);
